@@ -23,7 +23,7 @@ public class permute1 {
     }
 
     public static List<List<Integer>> result = new ArrayList<>();// 存放符合条件结果的集合
-    public static LinkedList<Integer> path = new LinkedList<>();// 用来存放符合条件结果
+    public static List<Integer> path = new ArrayList<>();// 用来存放符合条件结果
     public static boolean[] used;
 
     public static List<List<Integer>> permute(int[] nums) {
@@ -31,11 +31,11 @@ public class permute1 {
             return result;
         }
         used = new boolean[nums.length];
-        permuteHelper(nums);
+        backtracking(nums);
         return result;
     }
 
-    private static void permuteHelper(int[] nums) {
+    private static void backtracking(int[] nums) {
         if (path.size() == nums.length) {
             result.add(new ArrayList<>(path));
             return;
@@ -46,8 +46,8 @@ public class permute1 {
             }
             used[i] = true;
             path.add(nums[i]);
-            permuteHelper(nums);
-            path.removeLast();
+            backtracking(nums);
+            path.remove(path.size() - 1);
             used[i] = false;
         }
     }
